SERVER-92806: Track nested paths through MatchExpression trees while encoding indexability for plan cache entries  (#25969)

GitOrigin-RevId: 59ffa03640f81f5748312c8beac4ecd9b40cdd99